# NetT-learner

./: NetT-learner.py  README.md  example.py  pyproject.toml
real_data/: final_covariates_corr_lt_0p8.csv  network_common.csv  node_effects_all_back2logY.csv
src/NetT_learner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nett_learner/: __init__.py  data.py  gcn.py  linear.py  smoothing.py  types.py  utils.py
